Updated pom.xml to fix an issue with pitest plugin and to add some classes to excluded classes configuration.